{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 29,
  "lineage": "cce0a855-db05-8a53-a306-627d5b07cf48",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0435e88ed7a7f1ed7",
            "arn": "arn:aws:ec2:eu-west-2:878726137682:elastic-ip/eipalloc-0435e88ed7a7f1ed7",
            "domain": "vpc",
            "id": "eipalloc-0435e88ed7a7f1ed7",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-130-108-223.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.108.223",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-nat-eip",
              "Project": "witty"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-nat-eip",
              "Project": "witty"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:internet-gateway/igw-04d7b0885bda56397",
            "id": "igw-04d7b0885bda56397",
            "owner_id": "878726137682",
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-igw",
              "Project": "witty"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-igw",
              "Project": "witty"
            },
            "vpc_id": "vpc-0dc89c0afec7d121d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0435e88ed7a7f1ed7",
            "association_id": "eipassoc-01ed368af31c0f82e",
            "connectivity_type": "public",
            "id": "nat-0b34158b7a11f01e6",
            "network_interface_id": "eni-06a777c0c75d98efe",
            "private_ip": "10.0.10.90",
            "public_ip": "18.130.108.223",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01c81a3a74f0b2c27",
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-nat",
              "Project": "witty"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-nat",
              "Project": "witty"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c9e58942614951381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b34158b7a11f01e6",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9e5894261495138",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.this",
            "aws_nat_gateway.this",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04d7b0885bda56397",
            "id": "r-rtb-02262cf5e13396ef71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02262cf5e13396ef7",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:route-table/rtb-0c9e5894261495138",
            "id": "rtb-0c9e5894261495138",
            "owner_id": "878726137682",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-private-rt",
              "Project": "witty"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-private-rt",
              "Project": "witty"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc89c0afec7d121d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:route-table/rtb-02262cf5e13396ef7",
            "id": "rtb-02262cf5e13396ef7",
            "owner_id": "878726137682",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04d7b0885bda56397",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-public-rt",
              "Project": "witty"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-public-rt",
              "Project": "witty"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc89c0afec7d121d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012fb9b867c3347e7",
            "route_table_id": "rtb-0c9e5894261495138",
            "subnet_id": "subnet-0ccfc36a4aebaf8b6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ce4c82bbdcccf93",
            "route_table_id": "rtb-0c9e5894261495138",
            "subnet_id": "subnet-0c417a95e21882e6f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0254f052cdda09f4d",
            "route_table_id": "rtb-0c9e5894261495138",
            "subnet_id": "subnet-0496edb41ed627e6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-078a0836b3b04bacb",
            "route_table_id": "rtb-02262cf5e13396ef7",
            "subnet_id": "subnet-01c81a3a74f0b2c27"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d37fe32562920545",
            "route_table_id": "rtb-02262cf5e13396ef7",
            "subnet_id": "subnet-06b87862d0703ccf2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08769f4b818ee4feb",
            "route_table_id": "rtb-02262cf5e13396ef7",
            "subnet_id": "subnet-09e5a620e90e6ecba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:security-group/sg-017ee2cd68525b3f4",
            "description": "Allow SSH, 8021 and Redis access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017ee2cd68525b3f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP 6379",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow TCP 8021",
                "from_port": 8021,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8021
              }
            ],
            "name": "witty-eu-sg",
            "name_prefix": "",
            "owner_id": "878726137682",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "witty-eu-sg",
              "Project": "witty"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "witty-eu-sg",
              "Project": "witty"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dc89c0afec7d121d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:subnet/subnet-0ccfc36a4aebaf8b6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ccfc36a4aebaf8b6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878726137682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-private-1",
              "Project": "witty",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-private-1",
              "Project": "witty",
              "Type": "private"
            },
            "vpc_id": "vpc-0dc89c0afec7d121d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:subnet/subnet-0c417a95e21882e6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.128.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c417a95e21882e6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878726137682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-private-2",
              "Project": "witty",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-private-2",
              "Project": "witty",
              "Type": "private"
            },
            "vpc_id": "vpc-0dc89c0afec7d121d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:subnet/subnet-0496edb41ed627e6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.160.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0496edb41ed627e6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878726137682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-private-3",
              "Project": "witty",
              "Type": "private"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-private-3",
              "Project": "witty",
              "Type": "private"
            },
            "vpc_id": "vpc-0dc89c0afec7d121d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:subnet/subnet-01c81a3a74f0b2c27",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c81a3a74f0b2c27",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878726137682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-public-1",
              "Project": "witty",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-public-1",
              "Project": "witty",
              "Type": "public"
            },
            "vpc_id": "vpc-0dc89c0afec7d121d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:subnet/subnet-06b87862d0703ccf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b87862d0703ccf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878726137682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-public-2",
              "Project": "witty",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-public-2",
              "Project": "witty",
              "Type": "public"
            },
            "vpc_id": "vpc-0dc89c0afec7d121d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:subnet/subnet-09e5a620e90e6ecba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e5a620e90e6ecba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878726137682",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-public-3",
              "Project": "witty",
              "Type": "public"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC-public-3",
              "Project": "witty",
              "Type": "public"
            },
            "vpc_id": "vpc-0dc89c0afec7d121d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:878726137682:vpc/vpc-0dc89c0afec7d121d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02e82222e78a8f128",
            "default_route_table_id": "rtb-0801a290c896be4aa",
            "default_security_group_id": "sg-06c2fd4b2ec250674",
            "dhcp_options_id": "dopt-06423d978dfeb04ee",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dc89c0afec7d121d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0801a290c896be4aa",
            "owner_id": "878726137682",
            "tags": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC",
              "Project": "witty"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "WITTY-EU-VPC",
              "Project": "witty"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}